fix: fix unit tests